cholera 0.7.9.9035
==================

- add temporary fix for cases 299 and 430 in latlongAddress().
- temporarily use latlongAddress() in latlongWalkingPath().


cholera 0.7.9.9034
==================

- amend latlongNearestPump() for observed cases.


cholera 0.7.9.9033
==================

- use cholera::ortho.proj$road.segment in latlongOrthoAddress().
- use cholera::ortho.proj.pump$road.segment in latlongOrthoPump().


cholera 0.7.9.9032
==================

- use latlong*() prototypes in latlongEmbed().


cholera 0.7.9.9031
==================

- add new latlongOrthoAddress() prototype.
- add/set latlongOrthoAddress(vestry = FALSE).
- add latlongOrthoPump() prototype.


cholera 0.7.9.9030
==================

- include points (vertices) above threshold in partitionRoads().
- add partitionRoadsPDF().
- fix latlongRoads() output.
- add/set partitionRoadsPDF(pch = 46).
- fix nominal georeferenced coordinates errors in latlongRoads().


cholera 0.7.9.9029
==================

- add latlongOrthoAddressPDF().
- add rotatePoint(dataset = "ortho.proj").
- add latlongOrthoAddress().


cholera 0.7.9.9028
==================

- return data frames for 6-tuples in partitionOrthoAddresses().
- use 4 sets (vertices) as common denominator for partitionOrthoAddresses().
- include cases above inter.point.dist in partitionOrthoAddresses().


cholera 0.7.9.9027
==================

- include closed tetrad (complete graph) in partitionOrthoAddresses().


cholera 0.7.9.9026
==================

- add latlong.pumps.vestry.


cholera 0.7.9.9025
==================

- add partitionOrthoAddresses().


cholera 0.7.9.9024
==================

- use pre-computed data in latlongOrthoProj() and latlongOrthoProjPumps().
- recompute latlong versions of ortho.proj, ortho.proj.pump and
  ortho.proj.pump.vestry.


cholera 0.7.9.9023
==================

- add/use latlong versions of fatalities.address, frame, pumps and roads data.


cholera 0.7.9.9022
==================
